# data_visualization

./: .gitignore  Makefile  README.md  pyproject.toml
data/: new_york_weather_2023.csv
data_visualization/: death_valley_highs_lows.py  dice_visual.py  die_visual.py  mpl_squares.py  new_york_prcp.py  random_walk.py  rw_visual.py  scatter_squares.py  sitka_highs_lows.py
